# turtlers

./: .gitmodules  Cargo.toml  README.md
.copilot/: instructions.md
.github/: copilot-instructions.md
examples/: interrupted_lines.rs  koch.rs  stern.rs  tweening_test.rs
src/: builders.rs  commands.rs  debug.rs  drawing.rs  events.rs  lib.rs  main.rs  shapes.rs  state.rs  turtle_bundle.rs
src/drawing/: animation.rs  line_segments.rs
src/drawing/animation/: line_lens.rs
src/general/: angle.rs  length.rs
turtle-example/: Cargo.toml  README.md
turtle-example/examples/: interrupted_lines.rs  koch.rs  nikolaus.rs  stern.rs  tweening_test.rs
turtle-example/src/: main.rs
turtle-lib/: Cargo.toml  NotesWhileUpgradingBevy.md  README.md
turtle-lib-macroquad/: Cargo.toml  README.md
turtle-lib-macroquad-macros/: Cargo.toml  README.md
turtle-lib-macroquad-macros/src/: lib.rs
turtle-lib-macroquad/examples/: cheese.rs  cheese_macro.rs  circle_test.rs  direction_test_1.rs  dragon.rs  fill_advanced.rs  fill_demo.rs  fill_requirements.rs  hello_turtle.rs  koch.rs  logging_example.rs  macro_demo.rs  macro_demo_inline.rs  macro_full_demo.rs  nikolaus.rs  shapes.rs  sierpinski_triangle.rs  square.rs  stern.rs  v1_0_0.rs  yinyang.rs
turtle-lib-macroquad/src/: builders.rs  circle_geometry.rs  commands.rs  drawing.rs  execution.rs  general.rs  lib.rs  shapes.rs  state.rs  tessellation.rs  tweening.rs
turtle-lib-macroquad/src/general/: angle.rs  length.rs
turtle-lib-macros/: Cargo.toml  README.md
turtle-lib-macros/src/: lib.rs
turtle-lib/examples/: bezier.rs  cartesian_axes.rs  cheese.rs  cheese_macro.rs  circle_test.rs  clock.rs  clock_threaded.rs  dashed_circle.rs  dragon.rs  empty_star.rs  export_svg.rs  fill_advanced.rs  flower.rs  game_logic_demo.rs  geometric_art.rs  hangman_threaded.rs  hello_turtle.rs  koch.rs  logging_example.rs  macro_demo.rs  macro_demo_inline.rs  multi_turtle.rs  nikolaus.rs  shapes.rs  sierpinski_triangle.rs  squares.rs  stern.rs  test_svg_export.rs  text_demo.rs  v1_0_0.rs  yinyang.rs
turtle-lib/src/: builders.rs  circle_geometry.rs  commands.rs  commands_channel.rs  debug.rs  drawing.rs  events.rs  execution.rs  export.rs  export_svg.rs  general.rs  lib.rs  shapes.rs  state.rs  tessellation.rs  turtle_bundle.rs  tweening.rs
turtle-lib/src/drawing/: animation.rs  immediate.rs  line_segments.rs  run_step.rs
turtle-lib/src/drawing/animation/: circle_lens.rs  line_lens.rs
turtle-lib/src/general/: angle.rs  fontsize.rs  length.rs
turtle-lib/src/shapes/: turtle.rs
