[workspace]
resolver = "2"

members = ["turtle-lib", "turtle-lib-macros"]

[workspace.dependencies]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
