[package]
name = "turtle-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["wayland"] }
bevy_prototype_lyon = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
turtle-lib = { path = "../turtle-lib" }
