[package]
name = "turtle-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.9" }
bevy_prototype_lyon = {version="0.7"}
bevy-inspector-egui = "0.16"
num-traits = "0.2"
bevy_tweening = {version="0.6"}