[package]
name = "turtle-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
bevy_tweening = { workspace = true, optional = true }
num-traits = { workspace = true }

[features]
default = []
# Enable debug inspector UI (bevy-inspector-egui)
inspector = ["dep:bevy-inspector-egui"]
# Enable animations (bevy_tweening)
tweening = ["dep:bevy_tweening"]
